working on metadata to 6.8
Signed-off-by: Mikayla Thompson <thomika@amazon.com>